<resources>
    <string name="app_name">Queerfy</string>
    <string name="need_rent">Precisa alugar com urgência?</string>
    <string name="rent_level">Qual o seu nível de <font color='#F15356'>urgência</font>?</string>
    <string name="urgency">Urgente</string>
    <string name="plan">Planejar</string>
    <string name="register">Registre-se</string>
    <string name="name">Nome</string>
    <string name="since_date">Data de nascimento</string>
    <string name="gender_identity">Identidade de gênero</string>
    <string name="sexual_orientation">Orientação sexual</string>
    <string name="rg">RG</string>
    <string name="cpf">CPF</string>
    <string name="email">E-mail</string>
    <string name="cellphone">Celular</string>
    <string name="password">Senha</string>
    <string name="password_confirmation">Confirmação de senha</string>
    <string name="finish">Finalizar</string>
    <string name="following">Seguinte</string>
    <string name="hint_name">Nome completo</string>
    <string name="hint_since_date">__/__/____</string>
    <string name="hint_gender_identity">Selecionar</string>
    <string name="hint_sexual_orientation">Lésbica</string>
    <string name="hint_rg">__.___.___-_</string>
    <string name="hint_cpf">___.___.___-__</string>
    <string name="hint_email">email@email.com</string>
    <string name="hint_cellphone">(99) 99999–9999</string>
    <string name="hint_password">********</string>
    <string name="residence_photo">Residence photo</string>
    <string name="residence_title">Casa - 1 quarto disponível</string>
    <string name="residence_location">SP - Alphaville</string>
    <string name="favorite_button">Favoritar residência</string>
    <string name="description_title">Descrição</string>
    <string name="description_text">Quarto confortável, ambiente harmônico e agradável. Localizado no bairro de Alphaville em São Paulo.</string>
    <string name="description_details">4 hóspedes - 1 quarto - 3 camas - 1 banheiro</string>
    <string name="booking_title">Reserva</string>
    <string name="booking_daily_price">R$ 250,00</string>
    <string name="booking_daily_price_label">/diária</string>
    <string name="booking_total_price_label">Total:</string>
    <string name="booking_check_in_label">Check-in</string>
    <string name="date_edit_text_hint">dd/mm/aaaa</string>
    <string name="booking_button">Pronto</string>
    <string name="characteristics_title">Caracteristicas</string>
    <string name="wifi_characteristic">Wi-Fi</string>
    <string name="kitchen_characteristic">Cozinha</string>
    <string name="pets_characteristic">Animais</string>
    <string name="characteristics_host_for">Hospedado por</string>
    <string name="characteristics_host_name">Henri Rael</string>
    <string name="characteristics_host_photo">Foto do host</string>
    <string name="apartment">Apartamento</string>
    <string name="house">House</string>
    <string name="title_host_your_home">Hospede sua casa</string>
    <string name="title_type_of_space">Qual seu tipo de espaço?</string>
    <string name="title_address">Endereço</string>
    <string name="whole_place">Lugar inteiro</string>
    <string name="whole_room">Quarto inteiro</string>
    <string name="shared_room">Quarto compartilhado</string>
    <string name="home_shared_room">Compartilhado</string>
    <string name="street">Rua / Logradouro</string>
    <string name="hint_street">Rua dos Laranjeiras</string>
    <string name="city">Cidade</string>
    <string name="hint_city">São Paulo</string>
    <string name="uf_house">UF</string>
    <string name="hint_uf">SP</string>
    <string name="cep">CEP</string>
    <string name="number_house">Numero</string>
    <string name="hint_number">200</string>
    <string name="hint_cep">_____-___</string>
    <string name="district">Bairro</string>
    <string name="hint_district">Parque Terra Nova</string>
    <string name="complement">Complemento</string>
    <string name="hint_complement">Complemento</string>
    <string name="reference_points">Ponto de referência</string>
    <string name="hint_reference_points">Próximo a padaria</string>
    <string name="title_specifications">Especificações</string>
    <string name="title_guests">Quantidade de hóspedes</string>
    <string name="title_bedrooms">Quantidade de quartos</string>
    <string name="title_beds">Quantidade de camas</string>
    <string name="title_bathrooms">Quantidade de banheiros</string>
    <string name="title_which_filters_fit">Quais filtros se encaixam?</string>
    <string name="wifi">WI-FI</string>
    <string name="kitchen">Cozinha</string>
    <string name="garage">Garagem</string>
    <string name="animals">Animais</string>
    <string name="suite">Suite</string>
    <string name="title_describe_space">Hora de descrever o espaço</string>
    <string name="create_your_title">Crie seu título</string>
    <string name="hint_create_your_title">Casa em frente ao mar de Penha</string>
    <string name="create_your_describe">Crie seu descrição</string>
    <string name="hint_create_your_describe">Casa belíssima em frente a lagoa do porto.</string>
    <string name="pricing">Precificação</string>
    <string name="value_daily">Valor da sua diária</string>
    <string name="hint_pricing">R$ 200,00</string>
    <string name="title_your_ad">Hora de dar cara ao seu anúncio</string>
    <string name="best_photos">Escolha as melhores fotos</string>
    <string name="upload_photos">Envie fotos a partir do seu dispositivos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="footer_address_street">Rua Haddock Lobo, 595 – 8° Andar</string>
    <string name="footer_address_cep">"Cerqueira César – CEP: 01414–001"</string>
    <string name="footer_address_city">São Paulo - SP</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="menu">Menu</string>
    <string name="home">Home</string>
    <string name="myAccount">Minha conta</string>
    <string name="myAds">Meus anúncios</string>
    <string name="myFavorites">Menu favoritos</string>
    <string name="myReservation">Minhas reservas</string>
    <string name="notification">Notificaçóes</string>
    <string name="full_address">Rua Haddock Lobo, 595 - 8° Andar</string>
    <string name="address">Cerqueira César - CEP: 01414-001</string>
    <string name="sp">São Paulo - SP</string>
    <string name="exit">Sair</string>
    <string name="confirmation_title">Confirme sua reserva</string>
    <string name="confirmation_address_subtitle">Local</string>
    <string name="confirmation_address">Casa - 1 quarto disponível</string>
    <string name="confirmation_address_location">SP - Alphaville</string>
    <string name="confirmation_address_characteristics">4 hóspedes - 1 quarto - 3 camas - 1 banheiro</string>
    <string name="confirmation_check_in_title">Check-in:</string>
    <string name="confirmation_check_in_date">05/09/2022</string>
    <string name="confirmation_check_out_title">Check-out:</string>
    <string name="confirmation_check_out_date">15/09/2022</string>
    <string name="confirmation_values_title">Valores</string>
    <string name="confirmation_total_nights">4</string>
    <string name="confirmation_total_nights_label">diárias:</string>
    <string name="confirmation_total_nights_value">R$ 240,00</string>
    <string name="confirmation_service_tax_label">Taxa de serviço:</string>
    <string name="confirmation_service_tax_value">R$ 40,00</string>
    <string name="confirmation_total_label">Total:</string>
    <string name="confirmation_submit_button">Confirmar e pagar</string>
    <string name="fragment_trend_residence_title">Casa - 1 quarto disponível</string>
    <string name="fragment_trend_residence_location">"SP - Alphaville"</string>
    <string name="residence_list_trend_title">Locações com as melhores avaliações em {cidade}</string>
    <string name="residence_list_trend_subtitle">Estas acomodações foram muito bem avaliadas em vários aspectos.</string>
    <string name="fragment_trend_residence_image_description">Imagem da residência selecionada</string>
    <string name="residence_list_categories_title">O que você gostaria de ter no local onde está procurando?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category_wi_fi">Wi-Fi</string>
    <string name="category_animals">Animais</string>
    <string name="category_garage">Garagem</string>
    <string name="category_suit">Suíte</string>
    <string name="category_kitchen">Cozinha</string>
    <string name="residence_list_title">Aluguéis excelentes na área selecionada</string>
    <string name="fragment_residence_list">Foto de residência</string>
    <string name="fragment_residence_list_title">Casa - 1 quarto disponível</string>
    <string name="fragment_residence_list_price_label">" / noite"</string>
    <string name="text_home">Ainda não \n tem uma conta?</string>
    <string name="sign_up">Cadastre-se</string>
    <string name="accommodation">Qual tipo de acomodação \nvocê precisa?</string>
    <string name="share_house">Hospede sua casa e ajude alguém</string>
    <string name="host">Hospedar</string>
    <string name="earn_money">Ganhe dinheiro \ne ajude a comunidade</string>
    <string name="places_to_rent">Locais para alugar de acordo \ncom sua região</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiaWdvcnN1cmljYXMiLCJhIjoiY2t2Ym0waXc4MHdzbDJwdDJqbW9qazgybyJ9.7vOBK8_AgqPHKN1SDVaoMg</string>
</resources>