<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" android:id="@+id/menu">
        <item
            android:title="@string/menu">

            <menu>
                <item
                    android:id="@+id/nav_home"
                    android:title="Home" />
                <item
                    android:id="@+id/myAccount"
                    android:title="@string/myAccount" />
                <item
                    android:id="@+id/myAds"
                    android:title="@string/myAds" />
                <item
                    android:id="@+id/myFavorites"
                    android:title="@string/myFavorites" />
                <item
                    android:id="@+id/myReservations"
                    android:title="@string/myReservation" />
                <item
                    android:id="@+id/toPlanRegister"
                    android:title="@string/notification" />

            </menu>
        </item>
        <item
            android:id="@+id/logout_item"
            android:title="@string/exit"
            />
    </group>
</menu>