<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    android:orientation="vertical"
    tools:context=".view.residenceRegister.ResidenceRegisterStepTwoActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="40dp"
        android:hint="@string/title_host_your_home"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="24sp"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:background="@color/border_dark" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/containerFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/title_address"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/street"
            android:textColor="@color/red"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtStreet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_register_edit_text"
            android:hint="@string/hint_street"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/city"
            android:textColor="@color/red"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_register_edit_text"
            android:hint="@string/hint_city"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/uf_house"
            android:textColor="@color/red"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtUf"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:background="@drawable/shape_register_edit_text"
            android:hint="@string/hint_uf"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/cep"
            android:textColor="@color/red"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtCep"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:background="@drawable/shape_register_edit_text"
            android:hint="@string/hint_cep"
            android:inputType="number"
            android:padding="10dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/number_house"
            android:textColor="@color/red"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtNumber"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:background="@drawable/shape_register_edit_text"
            android:hint="@string/hint_number"
            android:inputType="number"
            android:padding="10dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/district"
            android:textColor="@color/red"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtDistrict"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_register_edit_text"
            android:hint="@string/hint_district"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/complement"
            android:textColor="@color/red"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtComplement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_register_edit_text"
            android:hint="@string/hint_complement"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/reference_points"
            android:textColor="@color/red"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtReferencePoints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_register_edit_text"
            android:hint="@string/hint_reference_points"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnFinish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/shape_register_button"
            android:backgroundTint="@color/red"
            android:text="@string/following"
            android:textColor="@color/white"
            android:onClick="advancedThreeStep"
            />
    </LinearLayout>

    </ScrollView>

</LinearLayout>