<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    android:orientation="vertical"
    tools:context=".view.RegisterChooseActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="40dp"
        android:text="@string/title_host_your_home"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="24sp"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:background="@color/border_dark" />

    <LinearLayout
        android:id="@+id/containerFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_describe_space"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/create_your_title"
            android:textColor="@color/red"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtCreateTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_register_edit_text"
            android:hint="@string/hint_create_your_title"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/create_your_describe"
            android:textColor="@color/red"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtCreateDescribe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_register_edit_text"
            android:hint="@string/hint_create_your_describe"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/pricing"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/value_daily"
            android:textColor="@color/red"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtValueDaily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_register_edit_text"
            android:hint="@string/hint_pricing"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnFinish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/shape_register_button"
            android:backgroundTint="@color/red"
            android:text="@string/following"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>