<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".view.ConfirmationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmation_title"
        android:textColor="@color/blue"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/confirmation_address_subtitle"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/residence_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/confirmation_address"
        android:textColor="@color/font"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/uf_residence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/confirmation_address_location"
        android:textColor="@color/font"
        app:drawableStartCompat="@drawable/ic_map_pin"
        app:drawableTint="@color/font" />

    <TextView
        android:id="@+id/details_residence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/confirmation_address_characteristics"
        android:textColor="@color/border_dark" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="@color/border_dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmation_check_in_title"
            android:textColor="@color/blue"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/checkin_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/confirmation_check_in_date"
            android:textColor="@color/font" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmation_check_out_title"
            android:textColor="@color/blue"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/checkout_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/confirmation_check_out_date"
            android:textColor="@color/font" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/border_dark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmation_service_tax_value" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/confirmation_values_title"
        android:textColor="@color/border_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/confirmation_total_nights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmation_total_nights"
            android:textColor="@color/font"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/confirmation_total_nights_label"
            android:textColor="@color/font"
            app:layout_constraintLeft_toRightOf="@id/confirmation_total_nights"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/confirmation_total_nights_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmation_total_nights_value"
            android:textAlignment="textEnd"
            android:textColor="@color/font"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/confirmation_service_tax_label"
            android:textColor="@color/font"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirmation_total_nights" />

        <TextView
            android:id="@+id/confirmation_service_tax_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/confirmation_service_tax_value"
            android:textAlignment="textEnd"
            android:textColor="@color/font"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirmation_total_nights_value" />

        <FrameLayout
            android:id="@+id/confirmation_second_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/border_dark"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirmation_service_tax_value" />

        <TextView
            android:id="@+id/confirmation_total_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/confirmation_total_label"
            android:textColor="@color/blue"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirmation_second_divider" />

        <TextView
            android:id="@+id/confirmation_total_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/confirmation_total_nights_value"
            android:textAlignment="textEnd"
            android:textColor="@color/font"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirmation_second_divider" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/blue"
            android:padding="10dp"
            android:text="@string/confirmation_submit_button"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirmation_total_label"
            android:onClick="createLease"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>