<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.RegisterChooseActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_host_your_home"
        android:textColor="@color/red"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="25dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@color/border_dark" />

    <LinearLayout
        android:id="@+id/containerFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_your_ad"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/best_photos"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/btnUploadPhotos"
            android:layout_width="match_parent"
            android:layout_height="165sp"
            android:drawableTop="@drawable/ic_image"
            android:text="@string/upload_photos"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:background="@drawable/shape_register_edit_text"
            android:padding="25dp"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/btnFinish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:background="@drawable/shape_register_button"
            android:backgroundTint="@color/red"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="40dp"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>